Closed Bug 1523233 Opened 7 years ago Closed 7 years ago

Fix animation delete time

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

Bug 1522407 is going to address test_animation_performance_warning.html failure. It addressed test failure, but WebRenderBridgeParent still hit NS_ERROR.

https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=223987095&repo=try&lineNumber=141628

Error message was "ASSERTION: Tried to delete invalid animation".
https://searchfox.org/mozilla-central/rev/88324fa347928412cb3e4c92418311b7ef5b4271/gfx/layers/wr/WebRenderBridgeParent.cpp#497

Assignee: nobody → sotaro.ikeda.g
Blocks: 1522407
Blocks: 1520705

(In reply to Sotaro Ikeda [:sotaro] from comment #0)

Error message was "ASSERTION: Tried to delete invalid animation".

WebRenderBridgeParent::RemoveEpochDataPriorTo() has a problem. Animation was deleted too early in the following STR.

-[1] Request to delete an animation A by WebRenderBridgeParent::RecvDeleteCompositorAnimations()
-[2] Request to re-add the animation A by WebRenderParentCommand::TOpAddCompositorAnimations message
-[3] WebRenderBridgeParent::RemoveEpochDataPriorTo() deletes obsoleted animation

In the STR, [3] removed animation A even when [2] re-added animation A again. It should not be deleted.

Summary: Fix NS_ERROR during test_animation_performance_warning.html test → Fix animation delete time

By comment 1, there could be a case that Animation does not run depends on a timing.

Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: