Bug 1523233 - Fix animation delete time r=kats

WebRenderBridgeParent::RemoveEpochDataPriorTo() does not check when animation is added by using epoch. Then there is a case that animation is deleted too early.

Differential Revision: https://phabricator.services.mozilla.com/D17799